--- a/src/test/resources/staging.properties
+++ b/src/test/resources/staging.properties
@@ -1,7 +1,8 @@
 #EndPoint
 url_signature_2=/id-now-services/api/securityManagement/v2/Signature
-url_signature_6=/id-now-services-snapshot/api/securityManagement/v6/Signature
-url_authentication=/id-now-services/api/securityManagement/v5/Authentication 
+url_signature_6=/id-now-services/api/securityManagement/v6/Signature
+url_authentication_v2=/id-now-services/api/securityManagement/v5/Authentication
+url_authentication_v5=/id-now-services/api/securityManagement/v5/Authentication
 url_PagareDeceval=https://lre7gz1t0j.execute-api.sa-east-1.amazonaws.com/PRU/ConsultarPagarepdf2
 
 #Endpoint Deceval
@@ -32,7 +33,7 @@ datoseguro_verde=35047
 datoseguro_rojo_azul=14886862
 datoseguro_rojo_verde=79789748
 datoseguro_rojo_verde_azul=38643270
-datoseguro_verde_azul=1140899248
+datoseguro_verde_azul=
 datoseguro_cifin=5660510
 
 
