Se realiza automatizacion cancelacion pagare

--- a/src/test/resources/staging.properties
+++ b/src/test/resources/staging.properties
@@ -11,6 +11,7 @@ url_ConsultaPagareDecevalConPdf=https://lre7gz1t0j.execute-api.sa-east-1.amazona
 url_crearGiratorDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/CrearGirador
 url_firmarPagareDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/firmarPagare
 url_CrearPagareDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/CrearPagare
+url_cancelarPagareDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/CancelarPagare
 
 #Conexiones
 datapower=http://10.130.2.131:5133
