Se ajustan historias de usuario

--- a/src/test/resources/staging.properties
+++ b/src/test/resources/staging.properties
@@ -12,6 +12,7 @@ url_crearGiratorDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/P
 url_firmarPagareDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/firmarPagare
 url_CrearPagareDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/CrearPagare
 url_cancelarPagareDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/CancelarPagare
+url_authentication_v7=/id-now-services-snapshot/api/securityManagement/v7/Authentication
 
 #Conexiones
 datapower=http://10.130.2.131:5133
