Se agregan automatizacion con servicios de cambiar estado y anulacion pagare

--- a/src/test/resources/staging.properties
+++ b/src/test/resources/staging.properties
@@ -1,8 +1,9 @@
 #EndPoint
 url_signature_2=/id-now-services/api/securityManagement/v2/Signature
-url_signature_6=/id-now-services/api/securityManagement/v6/Signature
+url_signature_6=/id-now-services-snapshot/api/securityManagement/v6/Signature
 url_authentication_v2=/id-now-services/api/securityManagement/v5/Authentication
 url_authentication_v5=/id-now-services/api/securityManagement/v5/Authentication
+url_authentication_v7=/id-now-services/api/securityManagement/v7/Authentication
 url_PagareDeceval=https://lre7gz1t0j.execute-api.sa-east-1.amazonaws.com/PRU/ConsultarPagarepdf2
 
 #Endpoint Deceval
@@ -12,7 +13,8 @@ url_crearGiratorDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/P
 url_firmarPagareDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/firmarPagare
 url_CrearPagareDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/CrearPagare
 url_cancelarPagareDeceval=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/CancelarPagare
-url_authentication_v7=/id-now-services-snapshot/api/securityManagement/v7/Authentication
+urlCambiarEstadoPagare=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/CambiarEstadoPagare
+urlAnularPagare=https://ns9orpyu6h.execute-api.sa-east-1.amazonaws.com/PRU/AnularPagare
 
 #Conexiones
 datapower=http://10.130.2.131:5133
